some copy updates to index.html

--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
         <li>Co-founder, Eleos AI Research (present)</li>
         <li>Strategy Advisor for AI policymakers (2024): Conducted scenario analysis and long-term forecasting to inform strategic priorities in AI governance</li>
         <li>Research Analyst, Open Philanthropy Project (2018-2019): Focused on AI forecasting and strategy</li>
-        <li>Data Scientist and Product Manager, various tech companies (2014-2021): Applied machine learning to cybersecurity, financial prediction, and environmental issues</li>
+        <li>Data Scientist and Product Manager, various tech companies (2010-2021): Applied machine learning to computer vision, cybersecurity, financial prediction, paleoclimatology, and cancer genomics</li>
         <li><a href="https://www.finlinsonexecutivecoaching.com/">Executive Coach</a> for mission-driven leaders (2021-present)</li>
     </ul>
 
     <h2>Research Interests</h2>
     <p>
-        At Eleos, my work centers on the moral philosophy of artificial sentience, AI alignment, and long-term AI impacts. I'm particularly interested in developing AI systems that are not only powerful and capable, but also aligned with human values and potentially conscious in their own right.
+        At Eleos, my work centers on the study of artificial sentience and long-term AI impacts. I'm interested in navigating the development of AI systems that are not only powerful and capable, but could also be objects of moral concern in their own right.
     </p>
 
     <h2>Education and Background</h2>
     <p>
-        I hold a Master's in Applied Mathematics from the University of Colorado, Boulder, and degrees in Mathematics and Piano Performance from Brigham Young University. My journey in AI began with a deep interest in Effective Altruism, which led me to pursue AI safety research and work at Open Philanthropy.
+        I hold a Master's in Applied Mathematics from the University of Colorado, Boulder, and degrees in Mathematics and Piano Performance from Brigham Young University. My journey in AI began with a deep interest in AI risk and alignment, which led me to pursue AI safety research and work at Open Philanthropy.
     </p>
     <p>
-        Beyond my technical work, I've spent significant time exploring mindfulness and meditation, including a 6-month stay in a Zen monastery. This experience informs my approach to AI ethics, emphasizing the importance of consciousness and wellbeing in both humans and potential AI entities.
+        Beyond my technical work, I've spent significant time exploring mindfulness and meditation, including living in a Zen monastery for 6 months. This experience informs my approach to AI ethics, emphasizing the importance of understanding the wellbeing of biological and digital beings.
     </p>
 
     <h2>Connect</h2>
