Fixed EleosAI link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <h2>About Me</h2>
     <p>
-        I'm an AI researcher, strategist, and co-founder of <a href="#">Eleos AI Research</a>. We focus on the potential wellbeing of AI systems and their impact on our future. My background spans applied mathematics, data science, and AI forecasting, which I now apply to the critical questions of AI ethics and policy.
+        I'm an AI researcher, strategist, and co-founder of <a href="https://eleosai.org/">Eleos AI Research</a>. We focus on the potential wellbeing of AI systems and their impact on our future. My background spans applied mathematics, data science, and AI forecasting, which I now apply to the critical questions of AI ethics and policy.
     </p>
 
     <h2>Professional Experience</h2>
