Edit OPP work description

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <ul>
         <li>Co-founder, Eleos AI Research (present)</li>
         <li>Strategy Advisor for AI policymakers (2024): Conducted scenario analysis and long-term forecasting to inform strategic priorities in AI governance</li>
-        <li>Research Analyst, Open Philanthropy Project (2018-2019): Focused on AI forecasting and strategy</li>
+        <li>Research Analyst, Open Philanthropy Project (2018-2019): Focused on AI forecasting</li>
         <li>Data Scientist and Product Manager, various tech companies (2010-2021): Applied machine learning to computer vision, cybersecurity, financial prediction, paleoclimatology, and cancer genomics</li>
         <li><a href="https://www.finlinsonexecutivecoaching.com/">Executive Coach</a> for mission-driven leaders (2021-present)</li>
     </ul>
