--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <h2>Professional Experience</h2>
     <ul>
-        <li>Co-founder, Eleos AI Research (present)</li>
+        <li>Co-founder, <a href="https://eleosai.org/">Eleos AI Research</a> (present)</li>
         <li>Strategy Advisor for AI policymakers (2024): Conducted scenario analysis and long-term forecasting to inform strategic priorities in AI governance</li>
         <li>Research Analyst, Open Philanthropy Project (2018-2019): Focused on AI forecasting</li>
         <li>Data Scientist and Product Manager, various tech companies (2010-2021): Applied machine learning to computer vision, cybersecurity, financial prediction, paleoclimatology, and cancer genomics</li>
