De-Claude index.html
- removed "ethics"
- removed "emphasizing the importance of"
- added "digital minds", will Rob be okay with that phrase?

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     
     <h2>About Me</h2>
     <p>
-        I'm an AI researcher, strategist, and co-founder of <a href="https://eleosai.org/">Eleos AI Research</a>. We focus on the potential wellbeing of AI systems and their impact on our future. My background spans applied mathematics, data science, and AI forecasting, which I now apply to the critical questions of AI ethics and policy.
+        I'm an AI researcher, strategist, and co-founder of <a href="https://eleosai.org/">Eleos AI Research</a>. 
+        We focus on the potential sentience and wellbeing of AI systems and their impact on our future. 
+        My background spans applied mathematics, data science, and AI forecasting, 
+        which I now apply to the critical questions about the development of powerful AI systems.
     </p>
 
     <h2>Professional Experience</h2>
@@ -54,12 +57,14 @@
         I hold a Master's in Applied Mathematics from the University of Colorado, Boulder, and degrees in Mathematics and Piano Performance from Brigham Young University. My journey in AI began with a deep interest in AI risk and alignment, which led me to pursue AI safety research and work at Open Philanthropy.
     </p>
     <p>
-        Beyond my technical work, I've spent significant time exploring mindfulness and meditation, including living in a Zen monastery for 6 months. This experience informs my approach to AI ethics, emphasizing the importance of understanding the wellbeing of biological and digital beings.
+        Beyond my technical work, I've spent significant time exploring mindfulness and meditation, 
+        including living in a Zen monastery for 6 months. This experience informs my approach to 
+        understanding the wellbeing of digital minds.
     </p>
 
     <h2>Connect</h2>
     <p>
-        If you're interested in discussing AI ethics, consciousness, or the future of artificial sentience, feel free to reach out: <a href="mailto:kathleen@finlinson.net">kathleen@finlinson.net</a>
+        If you're interested in discussing AI consciousness or the future of artificial sentience, feel free to reach out: <a href="mailto:kathleen@finlinson.net">kathleen@finlinson.net</a>
     </p>
     <p>
         For a list of my academic publications, visit my <a href="https://scholar.google.com/citations?hl=en&user=K-sI334AAAAJ">Google Scholar page</a>.
