small edits to index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         I'm an AI researcher, strategist, and co-founder of <a href="https://eleosai.org/">Eleos AI Research</a>. 
         We focus on the potential sentience and wellbeing of AI systems and their impact on our future. 
         My background spans applied mathematics, data science, and AI forecasting, 
-        which I now apply to the critical questions about the development of powerful AI systems.
+        which I now apply to critical questions about the development of powerful AI systems.
     </p>
 
     <h2>Professional Experience</h2>
@@ -54,7 +54,9 @@
 
     <h2>Education and Background</h2>
     <p>
-        I hold a Master's in Applied Mathematics from the University of Colorado, Boulder, and degrees in Mathematics and Piano Performance from Brigham Young University. My journey in AI began with a deep interest in AI risk and alignment, which led me to pursue AI safety research and work at Open Philanthropy.
+        I hold a Master's in Applied Mathematics from the University of Colorado, Boulder, and degrees 
+        in Mathematics and Piano Performance from Brigham Young University. My journey in AI began with an
+        interest in AI risk and alignment, which led me to pursue AI safety research and work at Open Philanthropy.
     </p>
     <p>
         Beyond my technical work, I've spent significant time exploring mindfulness and meditation, 
