Remove Eleos experience from index.html

--- a/index.html
+++ b/index.html
@@ -32,25 +32,28 @@
     
     <h2>About Me</h2>
     <p>
-        I'm an AI researcher, strategist, and co-founder of <a href="https://eleosai.org/">Eleos AI Research</a>. 
-        We focus on the potential sentience and wellbeing of AI systems and their impact on our future. 
+        I'm an AI safety researcher and strategist.
+        I recently co-founded <a href="https://eleosai.org/">Eleos AI Research</a>. 
+        Now I am working to make deals with misaligned AIs, as well as exploring ways to accelerate AI tools for existential security.
         My background spans applied mathematics, data science, and AI forecasting, 
         which I now apply to critical questions about the development of powerful AI systems.
     </p>
 
     <h2>Professional Experience</h2>
     <ul>
-        <li>Co-founder, <a href="https://eleosai.org/">Eleos AI Research</a> (present)</li>
+        <li>Co-founder, <a href="https://eleosai.org/">Eleos AI Research</a> (2024-2025)</li>
         <li>Strategy Advisor for AI policymakers (2024): Conducted scenario analysis and long-term forecasting to inform strategic priorities in AI governance</li>
         <li>Research Analyst, Open Philanthropy Project (2018-2019): Focused on AI forecasting</li>
         <li>Data Scientist and Product Manager, various tech companies (2010-2021): Applied machine learning to computer vision, cybersecurity, financial prediction, paleoclimatology, and cancer genomics</li>
         <li><a href="https://www.finlinsonexecutivecoaching.com/">Executive Coach</a> for mission-driven leaders (2021-present)</li>
     </ul>
 
+    <!-- 
     <h2>Research Interests</h2>
     <p>
         At Eleos, my work centers on the study of artificial sentience and long-term AI impacts. I'm interested in navigating the development of AI systems that are not only powerful and capable, but could also be objects of moral concern in their own right.
     </p>
+    -->
 
     <h2>Education and Background</h2>
     <p>
