--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
     <h2>About Me</h2>
     <p>
         I'm an AI safety researcher and strategist.
-        I recently co-founded <a href="https://eleosai.org/">Eleos AI Research</a>. 
-        Now I am working to make deals with misaligned AIs, as well as exploring ways to accelerate AI tools for existential security.
+        I am working to make deals with misaligned AIs, as well as exploring ways to accelerate AI tools for existential security.
+        I recently co-founded <a href="https://eleosai.org/">Eleos AI Research</a>.
         My background spans applied mathematics, data science, and AI forecasting, 
         which I now apply to critical questions about the development of powerful AI systems.
     </p>
 
     <h2>Professional Experience</h2>
     <ul>
-        <li>Co-founder, <a href="https://eleosai.org/">Eleos AI Research</a> (2024-2025)</li>
+        <li>Co-founder, <a href="https://eleosai.org/">Eleos AI Research</a> (Oct 2024 - May 2025)</li>
         <li>Strategy Advisor for AI policymakers (2024): Conducted scenario analysis and long-term forecasting to inform strategic priorities in AI governance</li>
         <li>Research Analyst, Open Philanthropy Project (2018-2019): Focused on AI forecasting</li>
         <li>Data Scientist and Product Manager, various tech companies (2010-2021): Applied machine learning to computer vision, cybersecurity, financial prediction, paleoclimatology, and cancer genomics</li>
@@ -69,7 +69,7 @@
 
     <h2>Connect</h2>
     <p>
-        If you're interested in discussing AI consciousness or the future of artificial sentience, feel free to reach out: <a href="mailto:kathleen@finlinson.net">kathleen@finlinson.net</a>
+        If you're interested in discussing making deals with misaligned AIs or building AI tools to accelerate existential security, feel free to reach out: <a href="mailto:kathleen@finlinson.net">kathleen@finlinson.net</a>
     </p>
     <p>
         For a list of my academic publications, visit my <a href="https://scholar.google.com/citations?hl=en&user=K-sI334AAAAJ">Google Scholar page</a>.
