--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <p>
         I'm an AI safety researcher and strategist.
         I am working to make deals with misaligned AIs, as well as exploring ways to accelerate AI tools for existential security.
-        I recently co-founded <a href="https://eleosai.org/">Eleos AI Research</a>.
         My background spans applied mathematics, data science, and AI forecasting, 
         which I now apply to critical questions about the development of powerful AI systems.
     </p>
 
     <h2>Professional Experience</h2>
     <ul>
+        <li>Program Manager, Future of Life Foundation <a href="https://www.flf.org/fellowship">Fellowship on AI for Human Reasoning</a> (Jul 2025 - Oct 2025)</li>
         <li>Co-founder, <a href="https://eleosai.org/">Eleos AI Research</a> (Oct 2024 - May 2025)</li>
         <li>Strategy Advisor for AI policymakers (2024): Conducted scenario analysis and long-term forecasting to inform strategic priorities in AI governance</li>
         <li>Research Analyst, Open Philanthropy Project (2018-2019): Focused on AI forecasting</li>
