Update meta description for AI research

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Kathleen Finlinson - AI Research and Ethics">
+    <meta name="description" content="Kathleen Finlinson - AI for Existential Security">
     <title>Kathleen Finlinson</title>
     <style>
         body {
